--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
   <div id="navbar" class="fixed top-0 left-0 w-full bg-white text-black shadow-md z-50 fade-in">
     <div class="max-w-screen-xl mx-auto px-6 py-[10px] flex justify-between items-center h-[70px]">
       <div class="text-xl font-bold">Florr Auto AFK</div>
-      <div class="space-x-6">
+      <div class="space-x-6 flex items-center">
         <a href="#download" class="hover:text-blue-600 font-medium">Download</a>
         <a href="#features" class="hover:text-green-600 font-medium">Features</a>
         <a href="#gallery" class="hover:text-yellow-600 font-medium">Gallery</a>
         <a href="#contact" class="hover:text-gray-600 font-medium">Contact</a>
+		<button id="lang-toggle" class="hover:text-purple-600 font-medium">
+  中文
+</button>
+		
       </div>
     </div>
   </div>
@@ -139,6 +143,10 @@
         or QQ.
       </p>
       <p class="text-md text-gray-600 leading-relaxed">
+		Creator:
+		<a href="https://github.com/Shiny-Ladybug" rel="noopener noreferrer" class="font-bold hover:underline">
+          Shiny Ladybug
+        </a><br />
         Contributors:
         <a href="https://github.com/RandomGuy1520" rel="noopener noreferrer" class="font-bold hover:underline">
           RandomGuy1520
@@ -159,6 +167,7 @@
   </section>
 
   <script src="worker.js"></script>
+  <script src="translate.js"></script>
 </body>
 
 </html>
