--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         <a href="#download" class="hover:text-blue-600 font-medium">Download</a>
         <a href="#features" class="hover:text-green-600 font-medium">Features</a>
         <a href="#gallery" class="hover:text-yellow-600 font-medium">Gallery</a>
+        <a href="#faq" class="hover:text-indigo-600 font-medium">FAQ</a>
         <a href="#contact" class="hover:text-gray-600 font-medium">Contact</a>
-		<button id="lang-toggle" class="hover:text-purple-600 font-medium">
-  中文
-</button>
-		
+        <button id="lang-toggle" class="hover:text-purple-600 font-medium">
+          中文
+        </button>
       </div>
     </div>
   </div>
@@ -66,7 +66,7 @@
             <svg class="fill-current w-5 h-5 mr-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
               <path d="M13 8V2H7v6H2l8 8 8-8h-5zM0 18h20v2H0v-2z" />
             </svg>
-            <span>Download Source Code</span>
+            <span>Download Source</span>
           </button>
           <div class="absolute left-0 w-full hidden group-hover:block z-20">
             <!-- Increased z-index for dropdown -->
@@ -130,6 +130,38 @@
 
   </section>
 
+  <!-- Section: FAQ -->
+  <section id="faq" class="min-h-screen bg-indigo-100 pt-20 px-6 flex flex-col items-center">
+    <div class="w-full text-center mt-6">
+      <h2 class="text-5xl font-bold">FAQ</h2><br />
+      <p class="text-xl">
+        Frequently Asked Questions.
+      </p>
+    </div>
+    <div class="max-w-3xl w-full mx-auto mt-12 mb-12 space-y-4">
+      <div class="bg-white p-6 rounded-lg shadow-md">
+        <h3 class="text-2xl font-semibold mb-2"></h3>
+        <p class="text-lg"></p>
+      </div>
+      <div class="bg-white p-6 rounded-lg shadow-md">
+        <h3 class="text-2xl font-semibold mb-2"></h3>
+        <p class="text-lg"></p>
+      </div>
+      <div class="bg-white p-6 rounded-lg shadow-md">
+        <h3 class="text-2xl font-semibold mb-2"></h3>
+        <p class="text-lg"></p>
+      </div>
+      <div class="bg-white p-6 rounded-lg shadow-md">
+        <h3 class="text-2xl font-semibold mb-2"></h3>
+        <p class="text-lg"></p>
+      </div>
+      <div class="bg-white p-6 rounded-lg shadow-md">
+        <h3 class="text-2xl font-semibold mb-2"></h3>
+        <p class="text-lg"></p>
+      </div>
+    </div>
+  </section>
+
   <!-- Section: Contact -->
   <section id="contact" class="w-full bg-gray-100 pl-24 pr-6 py-12 flex justify-start items-start">
     <div class="max-w-3xl">
@@ -143,8 +175,8 @@
         or QQ.
       </p>
       <p class="text-md text-gray-600 leading-relaxed">
-		Creator:
-		<a href="https://github.com/Shiny-Ladybug" rel="noopener noreferrer" class="font-bold hover:underline">
+        Creator:
+        <a href="https://github.com/Shiny-Ladybug" rel="noopener noreferrer" class="font-bold hover:underline">
           Shiny Ladybug
         </a><br />
         Contributors:
