--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
       </div>
       <a href="https://github.com/Shiny-Ladybug/florr-auto-afk"
-        class="text-blue-600 underline hover:text-blue-800 text-lg">
+        class="text-blue-600 underline hover:text-blue-800 text-lg" id="view-github">
         View on GitHub
       </a>
     </div>
