--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Florr Auto AFK</title>
-  <link rel="icon" type="image/x-icon" href="assets/icon.ico">
+  <link rel="icon" type="image/x-icon" href="./favicon.ico">
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <style>
@@ -23,6 +23,7 @@
         <a href="#features" class="hover:text-green-600 font-medium">Features</a>
         <a href="#gallery" class="hover:text-yellow-600 font-medium">Gallery</a>
         <a href="#faq" class="hover:text-indigo-600 font-medium">FAQ</a>
+        <a href="#test" class="hover:text-red-600 font-medium">Test</a>
         <a href="#contact" class="hover:text-gray-600 font-medium">Contact</a>
         <button id="lang-toggle" class="hover:text-purple-600 font-medium">
           中文
@@ -163,6 +164,20 @@
       <div class="bg-white p-6 rounded-lg shadow-md">
         <h3 class="text-2xl font-semibold mb-2"></h3>
         <p class="text-lg"></p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section: Test -->
+  <section id="test" class="min-h-screen bg-red-200 pt-24 px-6 flex flex-col items-center">
+    <div class="w-full text-center mt-6">
+      <h2 class="text-5xl font-bold mb-4">Test</h2>
+      <p class="text-xl mb-8">Demo video of Florr Auto AFK in action.</p>
+      <div class="flex justify-center items-center w-full">
+        <video controls class="rounded-xl shadow-lg w-4/5 h-auto" style="max-width:800px;">
+          <source src="./test.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
       </div>
     </div>
   </section>
