video uri update

--- a/index.html
+++ b/index.html
@@ -175,7 +175,9 @@
       <p class="text-xl mb-8">Demo video of Florr Auto AFK in action.</p>
       <div class="flex justify-center items-center w-full">
         <video controls class="rounded-xl shadow-lg w-4/5 h-auto" style="max-width:800px;">
-          <source src="./test.mp4" type="video/mp4">
+          <source
+            src="https://github.moeyy.xyz/https://github.com/Shiny-Ladybug/shiny-ladybug.github.io/raw/refs/heads/main/test.mp4"
+            type="video/mp4">
           Your browser does not support the video tag.
         </video>
       </div>
